update code buoi 3

--- a/Tuan1/Cac the co ban/index.html
+++ b/Tuan1/Cac the co ban/index.html
@@ -56,6 +56,16 @@
       tempora et dolore reiciendis! Aliquam laboriosam eum quaerat minus,
       asperiores sunt ea reprehenderit eius libero!
     </p>
+
+    <img
+      src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9e/Ours_brun_parcanimalierpyrenees_1.jpg/640px-Ours_brun_parcanimalierpyrenees_1.jpg"
+      alt="anh ve con gau"
+      style="width: 100px"
+    />
+
+    <video src=""></video>
+
+    <audio src=""></audio>
   </body>
 </html>
 <script src="/main.js"></script>
