--- a/Tuan2/Bai1/index.html
+++ b/Tuan2/Bai1/index.html
@@ -17,6 +17,10 @@
           <li><a href="about.html">About</a></li>
           <li><a href="services.html">Services</a></li>
           <li><a href="contact.html">Contact</a></li>
+          <li><a href="tel:0395364898">0395364898</a></li>
+          <li>
+            <a href="mailto:trankhoadev@gmail.com">trankhoadev@gmail.com</a>
+          </li>
         </ul>
       </div>
 
