--- a/Tuan 3/Buoi2/BtvnForm.html
+++ b/Tuan 3/Buoi2/BtvnForm.html
@@ -3,73 +3,112 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Bootstrap Form</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
     />
   </head>
   <body>
-    <div class="container">
+    <!-- 
+      container: để cái form giao diện của mình nó thục vào một khoảng trái phải
+      mt-4: để margin top một khoảng nhìn cho nó đẹp giao diện
+    -->
+    <div class="container mt-4">
       <form>
-        <!-- 1 -->
-        <div class="form">
-          <label for="fullname">Full Name: </label>
-
-          <input
-            type="text"
-            class="form-control"
-            id="fullname"
-            name="fullname"
-            placeholder="Full Name"
-          />
-        </div>
-        <!-- 2 -->
-        <div class="form">
-          <label for="password">Password:</label>
-          <input
-            type="password"
-            id="password"
-            name="password"
-            placeholder="Password"
-            class="form-control"
-          />
-        </div>
-
-        <!-- 3 -->
-        <div class="form">
-          <label for="password">Gender:</label>
-          <input type="radio" id="male" name="gender" value="male" />
-          <label for="male">Male</label>
-          <input type="radio" id="female" name="gender" value="female" />
-          <label for="female">Female</label>
-        </div>
-        <!-- 4 -->
-        <div class="form">
-          <label for="email">Email:</label>
-          <input
-            type="email"
-            id="email"
-            name="email"
-            class="form-control"
-            placeholder="Email"
-          />
-        </div>
-        <!-- 5 -->
-        <div class="form">
-          <label for="phone">Phone no:</label>
-          <select
-            id="mavung"
-            name="mavung"
-            class="form-control"
-            style="width: 50px"
+        <!-- 
+          Full Name
+            mb-3: margin bottom một khoảng 3
+            align-items-center: để căn giữa hàng theo chiều trên dưới
+         -->
+        <div class="mb-3 row align-items-center">
+          <!-- label thì mình set cho nó một khoảng bằng 2/12 -->
+          <label for="fullname" class="col-sm-2 col-form-label"
+            >Full Name:</label
           >
-            <option value="977">977</option>
-            <option value="56">56</option>
-            <option value="88">88</option>
-            <option value="123">123</option>
+
+          <!-- input thì mình set cho nó một khoảng bằng 10/12 -->
+          <div class="col-sm-10">
+            <input
+              type="text"
+              class="form-control"
+              id="fullname"
+              name="fullname"
+              placeholder="Full Name"
+            />
+          </div>
+        </div>
+
+        <!-- Password -->
+        <div class="mb-3 row align-items-center">
+          <label for="password" class="col-sm-2 col-form-label"
+            >Password:</label
+          >
+          <div class="col-sm-10">
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="Password"
+            />
+          </div>
+        </div>
+
+        <!-- Gender -->
+        <div class="mb-3 row align-items-center">
+          <label class="col-sm-2 col-form-label">Gender:</label>
+          <div class="col-sm-10 d-flex align-items-center">
+            <div class="form-check me-3">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="gender"
+                id="male"
+                value="male"
+              />
+              <label class="form-check-label" for="male">Male</label>
+            </div>
+            <div class="form-check">
+              <input
+                class="form-check-input"
+                type="radio"
+                name="gender"
+                id="female"
+                value="female"
+              />
+              <label class="form-check-label" for="female">Female</label>
+            </div>
+          </div>
+        </div>
+
+        <!-- Email -->
+        <div class="mb-3 row align-items-center">
+          <label for="email" class="col-sm-2 col-form-label">Email:</label>
+          <div class="col-sm-10">
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              placeholder="Email"
+            />
+          </div>
+        </div>
+
+        <!-- Phone -->
+        <div class="mb-3 row align-items-center">
+          <label for="phoneNum" class="col-sm-2 col-form-label"
+            >Phone no:</label
+          >
+          <div class="col-sm-10 d-flex">
+            <!-- me-2: margin end (right) một khoảng nhỏ về bên phải -->
+            <select id="mavung" name="mavung" class="form-select w-auto me-2">
+              <option value="977">977</option>
+              <option value="56">56</option>
+              <option value="88">88</option>
+              <option value="123">123</option>
+            </select>
             <input
               type="text"
               class="form-control"
@@ -77,34 +116,23 @@
               name="phoneNum"
               placeholder="39482***"
             />
-          </select>
+          </div>
         </div>
-        <button id="submit" type="submit" class="submit-btn btn btn-success">
-          Submit
-        </button>
+
+        <!-- Submit -->
+        <div class="mb-3 row">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-success">Submit</button>
+          </div>
+        </div>
       </form>
     </div>
   </body>
 </html>
+
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
   integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
   crossorigin="anonymous"
 ></script>
-
-<style>
-  * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
-
-  .form {
-    display: flex;
-    align-items: center;
-  }
-
-  label {
-    width: 20%;
-  }
-</style>
