--- a/Tuan4/Buoi2/BTVN/index.html
+++ b/Tuan4/Buoi2/BTVN/index.html
@@ -14,7 +14,10 @@
       <input id="myText" type="text" class="form-control" />
 
       <div class="p-4 d-flex justify-content-center">
-        <button class="btn btn-success" onclick="demoFunc()">Thêm</button>
+        <button class="btn btn-success" onclick="nhapTen()">Thêm</button>
+        <button class="btn btn-danger mx-2" onclick="xoaTatCa()">
+          Xóa tất cả
+        </button>
       </div>
 
       <ul id="danhSach"></ul>
